[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/circle_64x64.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/Ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://prefab_scenes/ImpulseSelector/ImpulseSelector.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 25.0

[node name="Ball" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource( 2 )
continuous_cd = 1
contacts_reported = 10
contact_monitor = true
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ImpulseSelector" parent="." instance=ExtResource( 3 )]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )
[connection signal="input_event" from="InteractionArea" to="." method="_on_InteractionArea_input_event"]
[connection signal="mouse_entered" from="InteractionArea" to="." method="_on_InteractionArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="_on_InteractionArea_mouse_exited"]
